--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.1.3
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - home_image.png
+    - about_image.png
+    - logo_image.png
+    - location_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
